# lumos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  vcpkg.json
debian/: README  changelog  control  copyright  rules
package/: CMakeLists.txt
package/wix/: PathFragment.wxs  PathPatch.xml
src/: CMakeLists.txt  analyzer.cpp  analyzers.hpp  config.hpp.in  core.cpp  core.hpp  magicWrapper.cpp  magicWrapper.hpp  main.cpp  threadSafeQueue.hpp
src/analysis/: analyseManager.cpp  analyseManager.hpp  analyzer.cpp  analyzer.hpp  analyzers.hpp  iAnalyzer.cpp  iAnalyzer.hpp  multiLanguageAnalyzer.cpp  multiLanguageAnalyzer.hpp
src/models/: result.hpp
src/printer/: color.cpp  color.hpp  table.cpp  table.hpp
src/utils/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  test.cpp
tests/files/html/: a.html  b.html  c.html  d.html  e.html  f.html  g.html  h.html  i.html  j.html
tests/files/vue/: b.vue  c.vue  d.vue
