set(CPACK_PACKAGE_DESCRIPTION "lumos")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Code statistics tool, convenient and fast!")
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

if(UNIX AND NOT APPLE)
    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
        set(ARCHITECTURE "amd64")
    endif()

    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Taipa Xu <taipaxu@gmail.com>")
    set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/taipaxu/lumos")
    set(CPACK_PACKAGE_LICENSE "GPL-3.0")
    set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${ARCHITECTURE}")
    set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
    set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-program-options1.74.0 (>= 1.74.0), libmagic1")

    install(TARGETS lumos
        RUNTIME DESTINATION bin
    )
    install(FILES ${CMAKE_SOURCE_DIR}/debian/copyright DESTINATION share/doc/lumos)
endif()

include(CPack)
